--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.5"
+    "react-tsparticles": "^2.12.2",
+    "react-use": "^17.6.0",
+    "tailwindcss": "^4.1.5",
+    "tsparticles": "^3.8.1",
+    "use-sound": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
