--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-vite-proj",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://malcholden.github.io/tic-tac-toe-game/",
   "type": "module",
   "scripts": {
     "dev": "vite",
